--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+	</head>
+	<body>
+		<div id="game-box"></div>
+	</body>
 </html>
